<resources>
    <string name="appName">MotorcycleSync</string>
    <string name="startup">GET STARTED</string>
    <string name="searchBar">Search for Motorcycles</string>
    <string name="teamName">APP-ENDPRO</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="Register">Register</string>
    <string name="register">register</string>
    <string name="hot_picks">Hot Picks</string>
    <string name="brands">Brands</string>
    <string name="hotpicks">Hot Picks</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hot_picksstring">Hot Picks</string>
    <string name="lateststring">latest</string>
    <string name="user_name">User</string>
    <string name="latest">Latest</string>
    <string name="Price">Search</string>
    <string name="FuelSystem">Search</string>
    <string name="Category">Search</string>
    <string name="TransmissionType">Search</string>
    <string name="Brand">Search</string>
</resources>