<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".Database.Registration">

    <TextView
        android:text="@string/Register"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:backgroundTint="#00065B"
        android:drawableTint="#00065B"
        android:textColorHint="#00065B"
        android:foregroundTint="#00065B"
        android:shadowColor="#00065B"
        android:textColor="#00065B"
        android:textColorHighlight="#00065B"
        app:dropDownBackgroundTint="#00065B"
        app:simpleItemSelectedRippleColor="#00065B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"
            android:hint="@string/email"
            android:textColorHint="#00065B"
            android:textColor="#00065B"
            android:textColorHighlight="#00065B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/buttonRegister"
        android:backgroundTint="#0038A8"

        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>